# sog

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
include/sog/: main.h
src/: main.c  validation.c
src/headers/: main.h  validation.h
src/sources/: main.c  validation.c
